* Ogone: Enable 3ds Global for Ogone Gateway [javierpedrozaing] #4776
* Worldpay: Fix Google Pay [almalee24] #4774
* Borgun change default TrCurrencyExponent and MerchantReturnUrl [naashton] #4788
* CyberSource: Enable auto void on r230 [aenand] #4794
* Redsys: Set appropriate request fields for stored credentials with CITs and MITs [BritneyS] #4784

== Version 1.129.0 (May 3rd, 2023)
* Adyen: Update selectedBrand mapping for Google Pay [jcreiff] #4763
* Shift4: Add vendorReference field [jcreiff] #4762
* Shift4: Add OAuth error [aenand] #4760
* Stripe PI: Add billing address details to Apple Pay and Google Pay tokenization request [BritneyS] #4761
* Make gem compatible with Ruby 3+ [pi3r] #4768

== Version 1.128.0 (April 24th, 2023)
* CheckoutV2: Add support for Shipping Address [nicolas-maalouf-cko] #4755
* Element: Include Apple Pay - Google pay methods [jherrera] #4647
* dLocal: Add transaction query API(s) request [almalee24] #4584
* MercadoPago: Add transaction inquire request [molbrown] #4588
* Worldpay: Add transaction inquire request [molbrown] #4592
* Alelo: Adding homologation changes [heavyblade] #4590
* Adyen: Map standard error codes for `processing_error`, `config_error`, `invalid_amount`, and `incorrect_address` [ajawadmirza] #4593
* MerchantE: Add support for recurring transactions [naashton] #4594
* CyberSource: Add support for `discount_management_indicator`, `purchase_tax_amount`, `installment_total_amount`, and `installment_annual_interest_rate` fields. [rachelkirk] #4595
* Shift4: Remove `customer` from refund and `clerk` from store requests [ajawadmirza] #4596
* TransFirst Transaction Express: Update xml prefixing to be compatible with Nokogiri 1.13.4 [dsmcclain] #4582
* Iveri: Adding support for external MPI 3DS2 [heavyblade] #4598
* Credorax: Pass Network Transaction ID on MIT [jherreraa] #4600
* iVeri: Remove schema validation on Live requests [curiousepic] #4606
* Beanstream: Adding Third Party 3DS fields [heavyblade] #4602