@@ -4,7 +4,7 @@ class StripeTest < Test::Unit::TestCase
   include CommStub
 
   def setup
-    @gateway = StripeGateway.new(login: 'login')
+    @gateway = StripeGateway.new(login: 'sk_test_login')
 
     @credit_card = credit_card()
     @threeds_card = credit_card('4000000000003063')
@@ -876,6 +876,20 @@ class StripeTest < Test::Unit::TestCase
     assert_match(/^Invalid response received from the Stripe API/, response.message)
   end
 
+  def test_invalid_login_test_transaction
+    gateway = StripeGateway.new(login: 'sk_live_3422')
+    assert response = gateway.purchase(@amount, @credit_card, @options)
+    assert_failure response
+    assert_match 'Invalid API Key provided', response.message
+  end
+
+  def test_invalid_login_live_transaction
+    gateway = StripePaymentIntentsGateway.new(login: 'sk_test_3422', test: false)
+    assert response = gateway.purchase(@amount, @credit_card, @options)
+    assert_failure response
+    assert_match 'Invalid API Key provided', response.message
+  end
+
   def test_add_creditcard_with_credit_card
     post = {}
     @gateway.send(:add_creditcard, post, @credit_card, {})
@@ -1254,7 +1268,7 @@ class StripeTest < Test::Unit::TestCase
   end
 
   def test_initialize_gateway_with_version
-    @gateway = StripeGateway.new(login: 'login', version: '2013-12-03')
+    @gateway = StripeGateway.new(login: 'sk_test_login', version: '2013-12-03')
     @gateway.expects(:ssl_request).once.with { |_method, _url, _post, headers|
       headers && headers['Stripe-Version'] == '2013-12-03'
     }.returns(successful_purchase_response)
