@@ -15,6 +15,7 @@
 * Borgun change default TrCurrencyExponent and MerchantReturnUrl [naashton] #4788
 * CyberSource: Enable auto void on r230 [aenand] #4794
 * Redsys: Set appropriate request fields for stored credentials with CITs and MITs [BritneyS] #4784
+* Stripe & Stripe PI: Validate API Key [almalee24] #4801
 
 == Version 1.129.0 (May 3rd, 2023)
 * Adyen: Update selectedBrand mapping for Google Pay [jcreiff] #4763
